--- a/package.json
+++ b/package.json
@@ -41,29 +41,29 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "latest",
+    "i18next": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-i18next": "latest",
+    "react-icons": "latest",
     "react-resizable-panels": "^2.1.7",
+    "react-tsparticles": "latest",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "framer-motion": "latest",
-    "react-i18next": "latest",
-    "react-tsparticles": "latest",
     "tsparticles": "latest",
-    "react-icons": "latest",
-    "i18next": "latest"
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
