--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
+  "name": "my-v0-project",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "^3.6.0",  
+    "date-fns": "^3.6.0",   
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "i18next": "latest",
@@ -32,3 +41,4 @@
     "typescript": "^5"
   }
 }
+
